--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -828,44 +828,53 @@ main {
   font-weight: var(--fw-300);
   line-height: 1.6;
 }
-
+.timeline-text li::before {
+  content: "\2022"; /* Unicode character for a bullet point (•) */
+  color: var(--light-gray); /* Set your desired color for the bullet points */
+  display: inline-block;
+  width: 1em; /* Adjust the width as needed for spacing */
+  margin-left: -1em; /* Adjust the margin as needed for spacing */
+}
 
 /**
  * skills 
  */
 
-.skills-title { margin-bottom: 20px; }
 
-.skills-list { padding: 20px; }
+ .skills-title { margin-bottom: 20px; }
 
+ .skills-list { padding: 20px; }
+ 
+ 
+ .skills-item:not(:last-child) { margin-bottom: 15px; }
+ 
+ .skill .title-wrapper {
+   display: flex;
+   align-items: center;
+   gap: 5px;
+   margin-bottom: 8px;
+ }
+ 
+ .skill .title-wrapper data {
+   color: var(--light-gray);
+   font-size: var(--fs-7);
+   font-weight: var(--fw-300);
+ }
+ 
+ .skill-progress-bg {
+   background: var(--jet);
+   width: 100%;
+   height: 8px;
+   border-radius: 10px;
+ }
+ 
+ .skill-progress-fill {
+   background: var(--text-gradient-yellow);
+   height: 100%;
+   border-radius: inherit;
+ }
+ 
 
-.skills-item:not(:last-child) { margin-bottom: 15px; }
-
-.skill .title-wrapper {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-  margin-bottom: 8px;
-}
-
-.skill .title-wrapper data {
-  color: var(--light-gray);
-  font-size: var(--fs-7);
-  font-weight: var(--fw-300);
-}
-
-.skill-progress-bg {
-  background: var(--jet);
-  width: 100%;
-  height: 8px;
-  border-radius: 10px;
-}
-
-.skill-progress-fill {
-  background: var(--text-gradient-yellow);
-  height: 100%;
-  border-radius: inherit;
-}
 
 
 
